fixed minor bug with background max-height on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -109,6 +109,9 @@ nav {
   display: -ms-flexbox;
   display: flex;
   max-height: 100vh;
+  @media (max-width: $bp){
+    max-height: none;
+  }
 }
 
 .left-bar {
